--- a/css/main.css
+++ b/css/main.css
@@ -90,14 +90,14 @@
 .wrapper .scroll-wrapper-bottom a .fa-arrow-up {
   margin: auto;
   color: black;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 /* line 87, ../../../netMatters/Portfolio/scss/header/_header.scss */
 .wrapper .scroll-wrapper-bottom a p {
   margin: auto;
   color: black;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -323,180 +323,262 @@
 /* line 21, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-1 {
   position: relative;
+  border: 1px solid #ccc;
+  max-width: 500px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  transition: all 1s;
 }
 
-/* line 23, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-1 .hover-text {
-  display: none;
-  color: white;
-  position: absolute;
-  top: 120px;
-  left: 45px;
-  z-index: 2;
-}
-
-/* line 32, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 28, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-1 img {
   width: 100%;
+  max-width: 500px;
   object-fit: cover;
-  border: 1px solid black;
+  border-bottom: 1px solid #ccc;
 }
 
-/* line 38, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 35, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-1 .project-1-name {
+  padding: 5px 10px;
+  margin: auto;
+  text-align: justify;
+}
+
+/* line 41, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-1 .project-link {
   text-decoration: none;
   color: black;
 }
 
-/* line 43, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-1 .project-link:hover img {
-  filter: brightness(50%);
-}
-
-/* line 47, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-1 .project-link:hover .hover-text {
-  display: block;
+/* line 46, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-1 .project-links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  margin: 5px;
 }
 
 /* line 52, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-1 .project-links a {
+  text-decoration: none;
+}
+
+/* line 56, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-1 .project-links .project-view, .projects-wrapper .project-grid .project-1 .project-links .project-git {
+  text-align: center;
+  border: 1px solid black;
+  margin: 5px;
+  padding: 5px;
+  color: black;
+}
+
+/* line 64, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-1 .project-links .project-view:hover, .projects-wrapper .project-grid .project-1 .project-links .project-git:hover {
+  border: none;
+  background-color: black;
+  color: white;
+}
+
+/* line 72, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-2 {
   position: relative;
+  border: 1px solid #ccc;
+  max-width: 500px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  transition: all 1s;
 }
 
-/* line 54, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-2 .hover-text {
-  display: none;
-  color: white;
-  position: absolute;
-  top: 120px;
-  left: 80px;
-  z-index: 2;
-}
-
-/* line 63, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 79, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-2 img {
   width: 100%;
   object-fit: cover;
-  border: 1px solid black;
+  border-bottom: 1px solid #ccc;
 }
 
-/* line 69, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 85, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-2 .project-link {
   text-decoration: none;
   color: black;
 }
 
-/* line 74, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-2 .project-link:hover img {
-  filter: brightness(50%);
+/* line 90, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-2 .project-2-name {
+  padding: 5px 10px;
+  margin: auto;
+  text-align: justify;
 }
 
-/* line 78, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-2 .project-link:hover .hover-text {
-  display: block;
+/* line 96, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-2 .project-links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  margin: 5px;
 }
 
-/* line 83, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 102, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-2 .project-links a {
+  text-decoration: none;
+}
+
+/* line 106, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-2 .project-links .project-view, .projects-wrapper .project-grid .project-2 .project-links .project-git {
+  text-align: center;
+  border: 1px solid black;
+  margin: 5px;
+  margin-top: 27px;
+  padding: 5px;
+  color: black;
+}
+
+/* line 115, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-2 .project-links .project-view:hover, .projects-wrapper .project-grid .project-2 .project-links .project-git:hover {
+  border: none;
+  background-color: black;
+  color: white;
+}
+
+/* line 123, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-3 {
   position: relative;
+  border: 1px solid #ccc;
+  max-width: 500px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  transition: all 1s;
 }
 
-/* line 85, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-3 .hover-text {
-  display: none;
-  color: white;
-  position: absolute;
-  top: 120px;
-  left: 80px;
-  z-index: 2;
-}
-
-/* line 94, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 130, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-3 img {
   width: 100%;
   object-fit: cover;
-  border: 1px solid black;
+  border-bottom: 1px solid #ccc;
 }
 
-/* line 100, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 136, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-3 .project-3-name {
+  padding: 5px 10px;
+  margin: auto;
+  text-align: justify;
+}
+
+/* line 142, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-3 .project-link {
   text-decoration: none;
   color: black;
 }
 
-/* line 105, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-3 .project-link:hover img {
-  filter: brightness(50%);
+/* line 147, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-3 .project-links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  margin: 5px;
 }
 
-/* line 109, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-3 .project-link:hover .hover-text {
-  display: block;
+/* line 153, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-3 .project-links a {
+  text-decoration: none;
 }
 
-/* line 114, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 157, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-3 .project-links .project-view, .projects-wrapper .project-grid .project-3 .project-links .project-git {
+  text-align: center;
+  border: 1px solid black;
+  margin: 5px;
+  margin-top: 48px;
+  padding: 5px;
+  color: black;
+}
+
+/* line 166, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-3 .project-links .project-view:hover, .projects-wrapper .project-grid .project-3 .project-links .project-git:hover {
+  border: none;
+  background-color: black;
+  color: white;
+}
+
+/* line 174, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-4 {
   position: relative;
+  border: 1px solid #ccc;
+  max-width: 500px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  transition: all 1s;
 }
 
-/* line 116, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-4 .hover-text {
-  display: none;
-  color: white;
-  position: absolute;
-  top: 120px;
-  left: 80px;
-  z-index: 2;
-}
-
-/* line 125, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 181, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-4 img {
   width: 100%;
   object-fit: cover;
-  border: 1px solid black;
+  border-bottom: 1px solid #ccc;
 }
 
-/* line 131, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+/* line 187, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-4 .project-4-name {
+  padding: 5px 10px;
+  margin: auto;
+  text-align: justify;
+}
+
+/* line 193, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
 .projects-wrapper .project-grid .project-4 .project-link {
   text-decoration: none;
   color: black;
 }
 
-/* line 136, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-4 .project-link:hover img {
-  filter: brightness(50%);
+/* line 198, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-4 .project-links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  margin: 5px;
 }
 
-/* line 140, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-.projects-wrapper .project-grid .project-4 .project-link:hover .hover-text {
-  display: block;
+/* line 204, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-4 .project-links a {
+  text-decoration: none;
+}
+
+/* line 208, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-4 .project-links .project-view, .projects-wrapper .project-grid .project-4 .project-links .project-git {
+  text-align: center;
+  border: 1px solid black;
+  margin: 5px;
+  margin-top: 27px;
+  padding: 5px;
+  color: black;
+}
+
+/* line 217, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+.projects-wrapper .project-grid .project-4 .project-links .project-view:hover, .projects-wrapper .project-grid .project-4 .project-links .project-git:hover {
+  border: none;
+  background-color: black;
+  color: white;
 }
 
 @media screen and (min-width: 768px) {
-  /* line 151, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-  .projects-wrapper .project-grid .project-1 img {
-    width: 300px;
+  /* line 231, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+  .projects-wrapper .project-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 700px;
   }
-  /* line 156, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-  .projects-wrapper .project-grid .project-2 img {
-    width: 300px;
+  /* line 236, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+  .projects-wrapper .project-grid .project-1 img, .projects-wrapper .project-grid .project-2 img, .projects-wrapper .project-grid .project-3 img, .projects-wrapper .project-grid .project-4 img {
+    width: 100%;
   }
-  /* line 161, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-  .projects-wrapper .project-grid .project-3 img {
-    width: 300px;
-  }
-  /* line 166, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
-  .projects-wrapper .project-grid .project-4 img {
-    width: 300px;
+  /* line 240, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+  .projects-wrapper .project-grid .project-1:hover, .projects-wrapper .project-grid .project-2:hover, .projects-wrapper .project-grid .project-3:hover, .projects-wrapper .project-grid .project-4:hover {
+    transform: scale(1.1);
   }
 }
 
 @media screen and (min-width: 1200px) {
-  /* line 177, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+  /* line 250, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
   .projects-wrapper {
     justify-content: center;
   }
-  /* line 179, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
+  /* line 252, ../../../netMatters/Portfolio/scss/projects/_projects.scss */
   .projects-wrapper .project-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -528,14 +610,15 @@
   resize: vertical;
   padding: 15px;
   font-size: 1.1rem;
+  font-family: 'Noto Sans Mono', monospace;
 }
 
-/* line 27, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 28, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .contact-wrapper form .form-field {
   margin: 10px 0px;
 }
 
-/* line 31, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 32, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .contact-wrapper form input[type=submit] {
   display: block;
   margin-top: 20px;
@@ -547,57 +630,57 @@
   font-size: 1.3rem;
 }
 
-/* line 43, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 44, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .contact-wrapper form input[type=submit]:hover {
   background-color: #555;
   cursor: pointer;
 }
 
-/* line 48, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 49, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .contact-wrapper form label {
   display: block;
   text-align: left;
 }
 
-/* line 55, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 56, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .success input[type=text] {
   box-shadow: 0px 0px 5px lime;
 }
 
-/* line 59, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 60, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .success textarea {
   box-shadow: 0px 0px 5px lime;
 }
 
-/* line 63, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 64, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .error input[type=text] {
   box-shadow: 0px 0px 5px red;
 }
 
-/* line 67, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 68, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .error textarea {
   box-shadow: 0px 0px 5px red;
 }
 
 @media screen and (min-width: 768px) {
-  /* line 73, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+  /* line 74, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
   .contact-wrapper form {
-    width: 400px;
+    width: 650px;
   }
-  /* line 75, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+  /* line 76, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
   .contact-wrapper form input[type=text], .contact-wrapper form textarea {
-    width: 400px;
+    width: 650px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  /* line 84, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+  /* line 85, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
   .contact-wrapper form {
-    width: 600px;
+    width: 650px;
   }
-  /* line 86, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+  /* line 87, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
   .contact-wrapper form input[type=text], .contact-wrapper form textarea {
-    width: 600px;
+    width: 650px;
   }
 }
 
