--- a/scss/code/_code.scss
+++ b/scss/code/_code.scss
@@ -1,8 +1,8 @@
 // code examples scss
 
-.main-wrapper {
+.about-wrapper {
     justify-content: center;
-    
+    width: 100vw;
     .code {
         margin: 10px;
         h2 {
