adjusted the positioning of the scs scheme and code examples content

--- a/scss/code/_code.scss
+++ b/scss/code/_code.scss
@@ -3,18 +3,20 @@
 .about-wrapper {
     justify-content: center;
     width: 100vw;
-    .code {
-        margin: 10px;
-        h2 {
-            text-align: center;
-        }
-        img {
-            width: 100%;
-            height: auto;
-        }
-        
-        p {
-            text-align: center;
+    .main-wrapper {  
+        .code {
+            h2 {
+                text-align: center;
+            }
+            img {
+                width: 100%;
+                height: auto;
+            }
+            
+            p {
+                text-align: center;
+            }
         }
     }
+    
 }
