--- a/scss/scs/_scs.scss
+++ b/scss/scs/_scs.scss
@@ -2,9 +2,9 @@
 
 .main-wrapper {
     display: grid;
-    justify-items: left;
-    width: 350px;
-    margin: 30px 20px;
+    justify-items: center;
+    width: 90vw;
+    margin: 20px;
     line-height: 2rem;
 
     a {
