--- a/css/main.css
+++ b/css/main.css
@@ -695,9 +695,9 @@
 /* line 3, ../../../netMatters/Portfolio/scss/scs/_scs.scss */
 .main-wrapper {
   display: grid;
-  justify-items: left;
-  width: 350px;
-  margin: 30px 20px;
+  justify-items: center;
+  width: 90vw;
+  margin: 20px;
   line-height: 2rem;
 }
 
@@ -765,24 +765,19 @@
   width: 100vw;
 }
 
-/* line 6, ../../../netMatters/Portfolio/scss/code/_code.scss */
-.about-wrapper .code {
-  margin: 10px;
-}
-
 /* line 8, ../../../netMatters/Portfolio/scss/code/_code.scss */
-.about-wrapper .code h2 {
+.about-wrapper .main-wrapper .code h2 {
   text-align: center;
 }
 
 /* line 11, ../../../netMatters/Portfolio/scss/code/_code.scss */
-.about-wrapper .code img {
+.about-wrapper .main-wrapper .code img {
   width: 100%;
   height: auto;
 }
 
 /* line 16, ../../../netMatters/Portfolio/scss/code/_code.scss */
-.about-wrapper .code p {
+.about-wrapper .main-wrapper .code p {
   text-align: center;
 }
 
