--- a/scss/code/_code.scss
+++ b/scss/code/_code.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     width: 100vw;
     .main-wrapper {  
-        margin-bottom: 290px;
+        margin-bottom: auto;
         .code {
             h2 {
                 text-align: center;
